<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmc_to_imu</name>
  <version>0.0.1</version>
  <description>Takes in NMEA sentences, parses RMC messages from them, and converts it to an absolute position IMU.</description>
  <maintainer email="rdlrobot@umich.edu">mcity</maintainer>
  <license>MIT License</license>

  <depend>sensor_msgs</depend>
  <depend>nmea_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
